Fix: Remove overlapping border color

--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -40,6 +40,7 @@
 .contact-page .input-fields input:focus-visible{
     outline: 1px solid #84CAFF;
     box-shadow: 0 0 10px #84CAFF;
+    border: 1px solid #84CAFF;
 }
 
 .contact-page .input-fields textarea{
@@ -56,7 +57,7 @@
 .contact-page .input-fields textarea:focus-visible{
     outline: 1px solid #84CAFF;
     box-shadow: 0 0 10px #84CAFF;
-    border: 1px solid rgba(248, 150, 135, 1);
+    border: 1px solid #84CAFF;
 }
 
 .contact-page .input-fields p{
